<resources>
    <string name="app_name">SmartSystem</string>
    <string name="app_description">Smart app for Philips Hue, Arduino and other devices</string>

    <string name="main_no_devices">No devices found</string>
    <string name="main_no_devices_summary">Add a new device in the settings</string>
    <string name="main_device_nonexistent">The device does not exist in your list</string>
    <string name="main_tap_to_connect">Tap to connect</string>
    <string name="main_connecting">Connecting</string>
    <string name="main_network_not_secure">Connection not secure</string>
    <string name="main_unknown_mode">The device uses an unknown mode</string>
    <string name="main_device_unavailable">The device is currently unavailable</string>
    <string name="main_parse_error">The response does not meet the requirements</string>
    <string name="main_client_error">The device did not answer</string>
    <string name="main_execution_completed">Execution completed successfully</string>

    <string name="main_device_icon">Device Icon</string>
    <string name="main_device_name">Your Devices</string>

    <string name="err">Something went wrong</string>
    <string name="err_wrong_format">Wrong format</string>
    <string name="err_wrong_format_summary">The JSON string does not meet the requirements</string>
    <string name="err_missing_name">Please enter a name</string>
    <string name="err_missing_name_summary">A name is important so that you can recognize the entry later</string>
    <string name="err_missing_address">Please enter an address</string>
    <string name="err_missing_address_summary">An address is important because it allows the app to reach the device</string>

    <string name="hue_connect">Connect to your Bridge</string>
    <string name="hue_press_button">Please press the button on your bridge to continue.</string>
    <string name="hue_tap">Tap to select</string>
    <string name="hue_brightness">Brightness</string>
    <string name="hue_color_temperature">Color temperature</string>
    <string name="hue_hue_sat">Hue and saturation</string>
    <string name="hue_add_scene">Add Scene</string>
    <string name="hue_new_scene">New Scene</string>
    <string name="hue_rename_scene">Please enter a new name</string>
    <string name="hue_delete_scene">Are you sure you want to delete this scene?</string>
    <string name="hue_controls">Controls</string>
    <string name="hue_lights">Lights</string>

    <string name="tasmota_empty_list">No commands added yet</string>
    <string name="tasmota_empty_list_summary">Add commands below</string>
    <string name="tasmota_add_command">Add command to list</string>
    <string name="tasmota_add_command_summary">Add a new command to your list</string>
    <string name="tasmota_add_command_dialog_title">Title</string>
    <string name="tasmota_add_command_dialog_command" translatable="false">cm\?cmnd=Power%20On</string>
    <string name="tasmota_add_command_dialog_title_empty">Command</string>
    <string name="tasmota_add_command_dialog_command_empty" translatable="false">cm\?</string>
    <string name="tasmota_delete_command">Are you sure you want to delete this entry?</string>
    <string name="tasmota_execute_once">Execute command</string>
    <string name="tasmota_execute_once_summary">Execute command once without adding it to the list</string>

    <string name="shelly_humidity_sensor_summary">Current humidity</string>
    <string name="shelly_powermeter_summary">Current power consumption</string>
    <string name="shelly_switch_title">Switch %1$d</string>
    <string name="shelly_temperature_sensor_summary">Current temperature</string>

    <string name="input_title">Please enter something</string>
    <string name="input_hint">Input</string>
    <string name="switch_summary_on">The switch is on</string>
    <string name="switch_summary_off">The switch is off</string>

    <string name="webView">Web View</string>
    <string name="webView_open">Open in browser</string>
    <string name="webView_error">Loading the website failed</string>
    <string name="webView_error_summary">Please check your network connection or try again later</string>
    <string name="webView_authentication">Authentication</string>

    <string name="pref">Settings</string>
    <string name="pref_general">General Settings</string>
    <string name="pref_theme">Change theme</string>
    <string name="pref_theme_summary">Changes the look of the app</string>
    <string name="pref_columns">Column count</string>
    <string name="pref_columns_summary">Changes the number of columns of the main list</string>
    <string name="pref_devices">Devices</string>
    <string name="pref_edit">Edit device list</string>
    <string name="pref_edit_summary">Edit the list of devices</string>
    <string name="pref_edit_device">Edit device</string>
    <string name="pref_delete_device_question">Are you sure you want to delete this device?</string>
    <string name="pref_device_config">Device Configuration</string>
    <string name="pref_add_shortcut">Add to Home screen</string>
    <string name="pref_add_shortcut_failed">Shortcuts are not supported by your system</string>
    <string name="pref_add">Add a new device</string>
    <string name="pref_add_summary">Add a new device with its address</string>
    <string name="pref_add_method">Select Method</string>
    <string name="pref_add_new_device">New Device</string>
    <string name="pref_add_id">Internal ID: %1$s</string>
    <string name="pref_add_name">Name</string>
    <string name="pref_add_name_example">e.g., Device</string>
    <string name="pref_add_name_empty">Device</string>
    <string name="pref_add_address">Address</string>
    <string name="pref_add_address_example">e.g., http://127.0.0.1/</string>
    <string name="pref_add_icon">Icon</string>
    <string name="pref_add_mode">Mode</string>
    <string name="pref_add_search">Searching for compatible devices</string>
    <string name="pref_add_search_summary">This might take a couple of seconds</string>
    <string name="pref_add_dialog">Add Device</string>
    <string name="pref_add_dialog_message">Do you want to add &#8220;%1$s&#8221; to your devices?</string>
    <string name="pref_edit_text">Advanced editing</string>
    <string name="pref_edit_text_summary">Edit the JSON string by yourself</string>
    <string name="pref_advanced">Advanced Settings</string>
    <string name="pref_reset">Delete all devices</string>
    <string name="pref_reset_summary">This deletes all your devices</string>
    <string name="pref_reset_question">Are you sure you want to delete all of your devices? This cannot be undone!</string>
    <string name="pref_reset_toast">Deleted all devices</string>
    <string name="pref_safety_checks">Block potentially unsafe requests</string>
    <string name="pref_safety_checks_summary">Perform basic security checks\nWarning: Turning this off can leak connection data to attackers!</string>
    <string name="pref_info">Information</string>
    <string name="pref_info_wiki">Wiki</string>
    <string name="pref_info_wiki_summary">Documentation and help</string>
    <string name="pref_info_header">Header background</string>
    <string name="pref_info_header_summary">Header background by Alberto Castillo Q. on Unsplash</string>
    <string name="pref_device_router">Router</string>
    <string name="placeholder">Loading</string>

    <string name="security_username">Username</string>
    <string name="security_password">Password</string>

    <string name="device_config_direct_view">Load device with main list</string>
    <string name="device_config_hide">Hide device from main list</string>
    <string name="device_config_hidden">hidden</string>
    <string name="device_config_info">Device Info</string>

    <string name="str_cancel">Cancel</string>
    <string name="str_name">Name</string>
    <string name="str_rename">Rename</string>
    <string name="str_edit">Edit</string>
    <string name="str_delete">Delete</string>
    <string name="str_show">Show</string>
    <string name="str_done">Done</string>
    <string name="str_add">Add</string>
    <string name="str_send">Send</string>
    <string name="str_on">On</string>
    <string name="str_off">Off</string>
    <string name="str_unreachable">Unreachable</string>

    <string name="about">About</string>
    <string name="about_summary">About the app</string>
    <string name="about_app_version">App version</string>
    <string name="about_app_version_desc" translatable="false">%1$s (%2$d)</string>
    <string name="about_privacy">External Content</string>
    <string name="about_privacy_desc">Contributors are loaded from GitHub. Read their privacy policy for further information.</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_contributors">Contributors</string>
    <string name="about_contributors_desc">A list of the contributors</string>
    <string name="about_general">General</string>
    <string name="about_github">GitHub repository</string>
    <string name="about_license">License</string>
    <string name="about_license_desc" translatable="false">GPL-3.0</string>
    <string name="about_icons">Icons</string>
    <string name="about_icons_desc">Icons by Icons8 and Google</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_libraries_desc">A list of all used libraries</string>

    <string-array name="pref_theme_array">
        <item>Light theme</item>
        <item>Dark theme</item>
        <item>Follow system theme</item>
    </string-array>
    <string-array name="pref_theme_array_values" translatable="false">
        <item>light</item>
        <item>dark</item>
        <item>auto</item>
    </string-array>
    <string-array name="pref_columns_array">
        <item>Auto</item>
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
    </string-array>
    <string-array name="pref_columns_array_values" translatable="false">
        <item>auto</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="pref_add_method_array">
        <item>Add device by address</item>
        <item>Search for compatible devices (experimental)</item>
    </string-array>
    <string-array name="pref_icons" translatable="false">
        <item>Clock</item>
        <item>Display</item>
        <item>Display Alt</item>
        <item>Electricity</item>
        <item>Gauge</item>
        <item>Hygrometer</item>
        <item>Lamp</item>
        <item>Raspberry Pi</item>
        <item>Router</item>
        <item>Socket</item>
        <item>Speaker</item>
        <item>Stack</item>
        <item>Thermometer</item>
        <item>Webcam</item>
    </string-array>
    <string-array name="pref_add_mode_array" translatable="false">
        <item>SimpleHome API</item>
        <item>ESP Easy</item>
        <item>Fritz! Auto-Login</item>
        <item>Hue API</item>
        <item>Node-RED</item>
        <item>Shelly Gen 1</item>
        <item>Shelly Gen 2</item>
        <item>Tasmota</item>
        <item>Website</item>
    </string-array>
    <string-array name="about_icons_array" translatable="false">
        <item>Icons8</item>
        <item>Google</item>
    </string-array>
    <string-array name="about_libraries" translatable="false">
        <item>Android AppCompat Library</item>
        <item>Android Preferences KTX</item>
        <item>Android Support Library Annotations</item>
        <item>AndroidX Security Kotlin Extensions</item>
        <item>ColorPickerView</item>
        <item>JUnit</item>
        <item>Material Components For Android</item>
        <item>Robolectric</item>
        <item>UPnPDiscovery</item>
        <item>Volley</item>
    </string-array>
</resources>
